--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link href='https://fonts.googleapis.com/css?family=Black+Ops+One' 
       rel='stylesheet' type='text/css'>
-    <title>SecretWord App</title>
+    <title>Secret Word</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
